formas de instalar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
       <h1>{{message}}</h1>
    </div>
 
-   <script src="vue.js"></script>
+   <!-- 
+      Versão clássica de usar/instalar Vue
+      <script src="vue.js"></script>
+   -->
+   <!--Vue com CDN
+      <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script> 
+   -->
+   <!-- Vue com npm ou yarn -->
+   <script src="node_modules/vue/dist/vue.min.js"></script>
    <script>
       let app = new Vue({
          el: '#start',
